--- a/style/default.css
+++ b/style/default.css
@@ -59,14 +59,15 @@ img {
 }
 
 #main {
-  margin: 10px;
+  padding: 10px;
+  vertical-align: top;
 }
 
 div.heading {
   background: #42638d;
   color: #eeeeee;
   padding: 5px;
-  margin: 5px;
+  margin-bottom: 5px;
 }
 
 span.title {
@@ -86,6 +87,10 @@ span.date {
 img.icon {
   float: left;
   margin: 5px;
+}
+
+div.item {
+  margin-bottom: 30px;
 }
 
 #linkbar {
