--- a/style/default.css
+++ b/style/default.css
@@ -27,7 +27,7 @@ img {
 #titlebar {
   background-image: url("../images/barbg.png");
   background-repeat: repeat-x;
-  width: 100%;
+  height: 100px;
 }
 
 #titlebarleft {
@@ -43,7 +43,6 @@ img {
   margin: 0px;
   border: none;
   padding: 0px;
-  margin: 0px;
   border-collapse: collapse;
 }
 
@@ -72,20 +71,15 @@ div.heading {
   color: #eeeeee;
   padding: 5px;
   margin-bottom: 5px;
+  font-weight: bold;
 }
 
 span.title {
   float: left;
-  background: #42638d;
-  color: #eeeeee;
-  font-weight: bold;
 }
 
 span.date {
   float: right;
-  background: #42638d;
-  color: #eeeeee;
-  font-weight: bold;
 }
 
 img.icon {
@@ -103,12 +97,8 @@ div.item {
   background: #f5f5f5;
   color: black;
   width: 100%;
-  border: solid;
-  border-color: #d0d0d0;
-  border-top-width: 1px;
-  border-bottom-width: 1px;
-  border-left-width: 0px;
-  border-right-width: 0px;
+  border: solid #d0d0d0;
+  border-width: 1px 0px 1px 0px;
   padding: 5px 5px 5px 5px;
   font-weight: bold;
 }
