added a tutorial; still working on the interface.

--- a/style/default.css
+++ b/style/default.css
@@ -97,6 +97,14 @@ div.item {
   text-align: justify; 
 }
 
+div.subtitle {
+  font-weight: bold;
+}
+
+div.images {
+  text-align: center;
+}
+
 #linkbar, #navbar {
   clear: both;
   background: #f5f5f5;
