--- a/style/default.css
+++ b/style/default.css
@@ -28,6 +28,12 @@ p {
   margin: 0.75em 0px;
 }
 
+p.tutorial {
+  margin: 1.33em 0px;
+  margin-left: 40px; 
+  margin-right: 40px;
+}
+
 #titlebar {
   background-image: url("../images/barbg.png");
   background-repeat: repeat-x;
