--- a/style/default.css
+++ b/style/default.css
@@ -34,6 +34,11 @@ p {
   margin-right: 40px;
 }
 
+li {
+  margin-left: 40px; 
+  margin-right: 40px;
+}
+
 #titlebar {
   background-image: url("../images/barbg.png");
   background-repeat: repeat-x;
