--- a/style/default.css
+++ b/style/default.css
@@ -147,6 +147,7 @@ span.filter {
   border-width: 1px 0px 1px 0px;
   padding: 5px 5px 5px 5px;
   font-weight: bold;
+  text-align: center;
 }
 
 span.linkitem:after {
