--- a/style/default.css
+++ b/style/default.css
@@ -139,6 +139,15 @@ span.filter {
   font-weight: bold;
 }
 
+div.code {
+  color: black;
+  background: #f5f5f5;
+  border: solid 2px black;
+  font-family: monospace;
+  white-space: pre;
+}
+
+
 #linkbar, #navbar {
   clear: both;
   background: #f5f5f5;
