style/default.css, tutorials/Perlotine/index.html: added a tag that will hopefully help the tables in the perlotine tutorial.
* tutorials/Image_Map/index.html: added the javascript into the "invisible"
head so the pop-up window will work.

--- a/style/default.css
+++ b/style/default.css
@@ -131,6 +131,11 @@ img.icon {
   margin: 5px;
 }
 
+img.mao {
+  margin: 0px;
+  padding: 0px;
+}
+
 div.subtitle {
   font-weight: bold;
   clear: both;
