added a tag that will hopefully help the tables in the perlotine tutorial. td.map

--- a/style/default.css
+++ b/style/default.css
@@ -136,6 +136,11 @@ img.map {
   padding: 0px;
 }
 
+td.map {
+  margin: 0px;
+  padding: 0px;
+}
+
 div.subtitle {
   font-weight: bold;
   clear: both;
