Some code cleanup.
Debugging code for the contest

--- a/programmatic/admin/news/include/news-pending_header.html
+++ b/programmatic/admin/news/include/news-pending_header.html
@@ -1,4 +1,4 @@
-<!-- -*- sgml -*- -->
+<!-- -*- xml -*- -->
 <div class="heading">Pending News Blotter</div>
   <form action="news-batch.cgi">
   <table class="news-index" width="100%" cellspacing="0" cellpadding="0" summary="news-approval queue">
