--- a/programmatic/admin/news/include/news-archive_header.html
+++ b/programmatic/admin/news/include/news-archive_header.html
@@ -1,4 +1,4 @@
-<!-- -*- sgml -*- -->
+<!-- -*- xml -*- -->
 <div class="heading">Archived News Blotter</div>
   <form action="news-batch.cgi">
   <table class="news-index" width="100%" cellspacing="0" cellpadding="0" summary="archive news queue">
