Some bug fixes in naming.  contest/index.html is now an example page using the new layout.

--- a/includes/wgo-navigation.xhtml
+++ b/includes/wgo-navigation.xhtml
@@ -12,3 +12,4 @@
     <link rel="alternate" hreflang="es" href="http://translate.google.com/translate?hl=es&amp;sl=en&amp;u=http://mmmaybe.gimp.org" />
 
     <!-- Additional menus  Unrecognised values, e.g. one or more <link rel="pineapple" />, receive their own menu -->
+    <link rel="validate" title="xhtml" href="http://validator.w3.org/check/referer" />
