--- a/includes/wgo-look-feel.xhtml
+++ b/includes/wgo-look-feel.xhtml
@@ -1,4 +1,3 @@
-    <link rel="stylesheet" type="text/css" href="wgo-layout.css"/>
-    <link rel="stylesheet" type="text/css" href="wgo-decor.css"/>
-
+    <link rel="stylesheet" type="text/css" href="/style/wgo-layout.css"/>
+    <link rel="stylesheet" type="text/css" href="/style/wgo-decor.css"/>
     <!--#include virtual="/includes/wgo-navigation.xhtml" -->
