--- a/includes/wgo-page-fini.xhtml
+++ b/includes/wgo-page-fini.xhtml
@@ -14,6 +14,6 @@
         <span id="footerright"><a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a></span>
         <span>&nbsp;</span>
       </div>
-      <div style="font-size: xx-small; color: #f5f5f5;"><a href="http://validator.w3.org/check/referer">validate-me</a></div>
+      <!--#include virtual="/includes/wgo-developers.xhtml" -->
     </div>
  
