--- a/style/wgo-layout.css
+++ b/style/wgo-layout.css
@@ -2,7 +2,7 @@
  * $Id$
  */
 body {
-  background: #f5f5f5;
+  background: white none repeat scroll 0% 0%;
   color: black;
   font-family: arial,helvetica,sans-serif;
   margin: 0px;
@@ -29,6 +29,7 @@ body {
   padding:         1em;
   border-right:    1px solid #d0d0d0;
   border-collapse: collapse;
+  background: #f5f5f5 none repeat scroll 0% 0%;
   vertical-align:  top;
   white-space:     nowrap;
   width:           12em;
@@ -41,7 +42,8 @@ body {
 }
       
 #flow {
-  background: white none;
+  background: white none repeat scroll 0% 0%;
+  color: black;
   border-left: 1px solid #d0d0d0;
   border-collapse: collapse;
   margin-left: 14em;
@@ -50,11 +52,13 @@ body {
       
 #page-footer {
   clear: both;
-  background: white;
+  background: white none repeat scroll 0% 0%;
+  color: black;
 }
 
 #colophon { 
-  background: white none;
+  background: white none repeat scroll 0% 0%;
+  color: black;
   height: 4em;
 }
 
