--- a/style/wgo-layout.css
+++ b/style/wgo-layout.css
@@ -26,7 +26,7 @@ body {
 #sidebar {
   color:           black;
   font-weight:     bold;
-  padding:         1em;
+  padding:         1em 1em 3em 1em;
   border-right:    1px solid #d0d0d0;
   border-collapse: collapse;
   background: #f5f5f5 none repeat scroll 0% 0%;
