*** empty log message ***

--- a/includes/wgo-admin-page-init.xhtml
+++ b/includes/wgo-admin-page-init.xhtml
@@ -5,5 +5,6 @@
 <a href="http://www.gimp.org"><img id="titlebarleft" src="/images/thegimp.png" alt="" /></a>
 <img id="titlebarright" src="/images/wilberright.png" alt="" />
 </div>
-<div id="sidebar"><!--#include virtual="/includes/wgo-menu.xhtml" --></div>
+<div id="sidebar">
+<!--#include virtual="/includes/wgo-admin-menu.xhtml" --></div>
 <div id="flow"><!-- matched in wgo-page-fini.xhtml -->
