--- a/includes/wgo-developers.xhtml
+++ b/includes/wgo-developers.xhtml
@@ -1,6 +1,6 @@
 <div class="developer">
   <fieldset>
-    <legend>WGO Developers Tools</legend>
+    <legend>WGO Developers Hooks</legend>
     <a href="http://validator.w3.org/check/referer">Validate XHTML</a>
     <a href="http://jigsaw.w3.org/css-validator/check/referer">Validate CSS</a>
     <a href="/TODO">Master TODO</a>
