--- a/style/wgo-layout.css
+++ b/style/wgo-layout.css
@@ -2,7 +2,8 @@
  * $Id$
  */
 body {
-  background: white none repeat scroll 0% 0%;
+  /*background: white none repeat scroll 0% 0%;*/
+  background: #f5f5f5 none repeat scroll 0% 0%;
   color: black;
   font-family: arial,helvetica,sans-serif;
   margin: 0px;
