--- a/style/wgo-decor.css
+++ b/style/wgo-decor.css
@@ -99,6 +99,7 @@ td.map {
 }
       
 div.subtitle {
+  margin-top: 1.2em;
   font-weight: bold;
   clear: both;
 }
@@ -158,17 +159,18 @@ div.book-of-wilber {
   padding: 1em;
 }
 
-.developer { 
+.developer {
   font-size: xx-small;
-  background: transparent none repeat scroll 0% 0%;
-  color: red;
+  background: yellow none repeat scroll 0% 0%;
+  color: black;
   padding: 0 0 0 0;
   margin: 0 0 0 0;
 }
 
-.developer focus:focus { 
-
- }
+.developer fieldset { 
+  background: yellow none repeat scroll 0% 0%;
+  color: black;
+}
       
 .developer legend { 
   background: transparent none repeat scroll 0% 0%;
@@ -176,10 +178,17 @@ div.book-of-wilber {
 }
 
 .developer a { 
-  background: transparent none repeat scroll 0% 0%;
-  font-size: xx-small;
   color: black;
+  font-size: xx-small;
   padding: 0 1em 0 0;
+}
+
+.developer a:visited { 
+  color: black;
+}
+.developer a:hover { 
+  color: black;
+  text-decoration: underline;
 }
       
       
