Added tutorials/Perlotine/index2.html as an example of using the new
* Added tutorials/Perlotine/index2.html as an example of using the
  new include files for tutorials, and includes my old tweaks to
  make the page purty despite a lack of understanding basic
  design. Caveat!

* Added tutorials/Perlotine/index1.html as an example of using the
  new include files for tutorials.

* Added wgo-tutorial-init.xhtml and wgo-tutorial-fini.xhtml for
  page layout of the tutorials.

--- a/includes/wgo-page-fini.xhtml
+++ b/includes/wgo-page-fini.xhtml
@@ -11,3 +11,11 @@
       <a href="/contest/index.html">Contest</a> |
       <a href="/books/">GIMP Books</a>
     </div>
+    <div>
+      <span id="footerleft">
+        &copy; 2001-2002 <a href="/team.html">The GIMP Team</a>
+      </span>
+      <span id="footerright">
+        <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
+      </span>
+    </div>
