Modified ChangeLog. Changed the address to the validation site. Tutorials
Modified ChangeLog.
Changed the address to the validation site.
Tutorials now using the new include files.
Fixed a validation problem on the index file for the tutorials.

--- a/includes/wgo-xhtml-fini.xhtml
+++ b/includes/wgo-xhtml-fini.xhtml
@@ -1,5 +1,7 @@
 <!-- $Id$ -->
-<span style="position: absolute; left: 0; font-size: xx-small;"><a href="http://validator.w3c.org/check/referer">Validate XHTML</a></span>
+<div>
+<span style="position: absolute; left: 0; font-size: xx-small;"><a href="http://validator.w3.org/check/referer">Validate XHTML</a></span>
+</div>
   </body>
 </html>
 
