Incipient changes in the linkbar for the admin pages

--- a/includes/wgo-admin-fini.xhtml
+++ b/includes/wgo-admin-fini.xhtml
@@ -4,12 +4,8 @@
     </table>
 
     <div id="linkbar">
-      <a href="/links/index.html">GIMP Links</a> |
-      <a href="http://gug.sunsite.dk">GIMP User Group</a> | 
-      <a href="http://gimp-savvy.com/BOOK/index.html">Grokking the GIMP</a> |
-      <a href="/mail_lists.html">Mailing Lists</a> |
-      <a href="/contest/index.html">Contest</a> |
-      <a href="/books/">GIMP Books</a>
+      <a href="/todo.xhtml">Web Site TODO</a> |
+      <a href="/admin/documentation">Web Site Documentation</a> | 
     </div>
     <div>
       <span id="footerleft">
