*** empty log message ***

--- a/includes/wgo-admin-fini.xhtml
+++ b/includes/wgo-admin-fini.xhtml
@@ -4,8 +4,8 @@
     </table>
 
     <div id="linkbar">
-      <a href="/todo.xhtml">Web Site TODO</a> |
-      <a href="/admin/documentation">Web Site Documentation</a> | 
+      <a href="/admin/todo.xhtml">Web Site TODO</a> |
+      <a href="/admin/documentation">Web Site Developer Documentation</a> | 
     </div>
     <div>
       <span id="footerleft">
