*** empty log message ***

--- a/includes/wgo-admin-init.xhtml
+++ b/includes/wgo-admin-init.xhtml
@@ -7,23 +7,27 @@
         <td id="menu">
           <span>www.gimp.org</span>
           <div>
-            <a href="/index.html">Home</a><br />
-            <a href="/contest">Contest</a><br />
+            <a style="padding-left: 1em" href="/index.html">Home</a><br />
           </div>
-          <span>Site Administration</span>
+          <span>Administration</span>
           <div>
-            <a href="/admin/index.html">Main Admin</a><br />
-            <a href="/admin/howto.html">HOWTO</a><br />
+            <a style="padding-left: 1em" href="/admin/index.html">Main</a><br />
+            <a style="padding-left: 1em" href="/admin/howto.html"> HOWTO</a><br />
           </div>
           <span>News</span>
           <div>
-            <a href="/admin/news/news-index.cgi?news-pending">Pending News</a><br />
-            <a href="/admin/news/news-index.cgi?news-current">Current News</a><br />
-            <a href="/admin/news/news-index.cgi?news-archive">Archived News</a><br />
-            <a href="/admin/news/howto-news.html">HOWTO</a><br />
-         </div>
-         <span>Contest(s)</span>
-         <div><a href="/admin/contest/gallery-edit.cgi">Splash Contest</a><br />
-       </div>
-     </td>
+            <a style="padding-left: 1em" href="/admin/news/news-index.cgi?news-pending">Pending News</a><br />
+            <a style="padding-left: 1em" href="/admin/news/news-index.cgi?news-current">Current News</a><br />
+            <a style="padding-left: 1em" href="/admin/news/news-index.cgi?news-archive">Archived News</a><br />
+            <a style="padding-left: 1em" href="/admin/news/howto-news.html">HOWTO</a><br />
+          </div>
+          <span>Splash Contest(s)</span>
+          <div>
+            <a style="padding-left: 1em" href="/admin/contest/gallery-edit.cgi">Edit Gallery</a><br />
+          </div>
+          <span>Developer</span>
+          <div>
+            <a style="padding-left: 1em" href="/admin/develop/changelogs.cgi">ChangeLogs</a><br />
+          </div>
+        </td>
      <td id="main">
