--- a/programmatic/admin/news/include/news-archive_footer.html
+++ b/programmatic/admin/news/include/news-archive_footer.html
@@ -1,16 +1,16 @@
 <!-- -*- xml -*- -->
-<tr style="background: white none;">
+<tr>
   <td></td>
   <td></td>
   <td></td>
   <td style="text-align: right;">
     <table class="ld" cellpadding="0" cellspacing="0" width="100%"><tbody>
-        <tr><td class="l--x--">&nbsp;</td><td class="l----x">&nbsp;</td></tr>
-        <tr><td class="l--x--">&nbsp;</td><td class="l----x">&nbsp;</td></tr>
+        <tr><td class="l--x--"></td><td class="l----x"></td></tr>
+        <tr><td class="l--x--"></td><td class="l----x"></td></tr>
       </tbody></table>
   </td>
 </tr>
-<tr style="background: white none;">
+<tr>
   <td></td>
   <td></td>
   <td style="text-align: right;">
@@ -18,12 +18,11 @@
     <input type="submit" name="action" value="current" />
     <input type="submit" name="action" value="pending" />
     <input type="hidden" name="queue" value="archive" />
-    &nbsp;
   </td>
   <td>
     <table class="ld" cellpadding="0" cellspacing="0" width="100%"><tbody>
-        <tr><td class="l--xx-">&nbsp;</td><td class="l----x">&nbsp;</td></tr>
-        <tr><td class="l-x---">&nbsp;</td><td class="l-----">&nbsp;</td></tr>
+        <tr><td class="l--xx-"></td><td class="l----x"></td></tr>
+        <tr><td class="l-x---"></td><td class="l-----"></td></tr>
       </tbody></table>
   </td>
 </tr>
