--- a/programmatic/admin/news/include/news-current_footer.html
+++ b/programmatic/admin/news/include/news-current_footer.html
@@ -5,12 +5,12 @@
   <td></td>
   <td style="text-align: right;">
     <table class="ld" cellpadding="0" cellspacing="0" width="100%"><tbody>
-        <tr><td class="l--x--">&nbsp;</td><td class="l----x">&nbsp;</td></tr>
-        <tr><td class="l--x--">&nbsp;</td><td class="l----x">&nbsp;</td></tr>
+        <tr><td class="l--x--"></td><td class="l----x"></td></tr>
+        <tr><td class="l--x--"></td><td class="l----x"></td></tr>
       </tbody></table>
   </td>
 </tr>
-<tr style="background: white none;">
+<tr>
   <td></td>
   <td></td>
   <td style="text-align: right; padding-right: 2px;">
@@ -21,8 +21,8 @@
   </td>
   <td style="margin: 0; padding: 0;">
     <table class="ld" cellpadding="0" cellspacing="0" width="100%"><tbody>
-        <tr><td class="l--xx-">&nbsp;</td><td class="l----x">&nbsp;</td></tr>
-        <tr><td class="l-x---">&nbsp;</td><td class="l-----">&nbsp;</td></tr>
+        <tr><td class="l--xx-"></td><td class="l----x"></td></tr>
+        <tr><td class="l-x---"></td><td class="l-----"></td></tr>
       </tbody></table>
   </td>
 </tr>
