--- a/programmatic/admin/news/include/news-pending_footer.html
+++ b/programmatic/admin/news/include/news-pending_footer.html
@@ -1,27 +1,27 @@
 <!-- -*- xml -*- -->
-<tr style="background: white none;">
-  <td></td>
-  <td></td>
-  <td></td>
-  <td style="background: white none; border: none; text-align: right;">
+<tr>
+  <td style="background: white none;"></td>
+  <td style="background: white none;"></td>
+  <td style="background: white none;"></td>
+  <td style="border: none; text-align: right;">
     <table class="ld" cellpadding="0" cellspacing="0" border="0"><tbody>
-        <tr><td class="l--x--">&nbsp;</td><td class="l----x">&nbsp;</td></tr>
-        <tr><td class="l--x--">&nbsp;</td><td class="l----x">&nbsp;</td></tr>
+        <tr><td class="l--x--"></td><td class="l----x"></td></tr>
+        <tr><td class="l--x--"></td><td class="l----x"></td></tr>
       </tbody></table>
   </td>
 </tr>
-<tr style="background: white none;">
+<tr>
   <td></td>
   <td></td>
-  <td style="text-align: right; padding-right: 2px;">
+  <td style=" text-align: right; padding-right: 2px;">
     <input type="submit" name="action" value="delete" />
     <input type="submit" name="action" value="approve" />
     <input type="hidden" name="queue" value="pending" />
   </td>
-  <td style="margin: 0; padding: 0;">
+  <td style=" margin: 0; padding: 0;">
     <table class="ld" cellpadding="0" cellspacing="0" border="0"><tbody>
-        <tr><td class="l--xx-">&nbsp;</td><td class="l----x">&nbsp;</td></tr>
-        <tr><td class="l-x---">&nbsp;</td><td class="l-----">&nbsp;</td></tr>
+        <tr><td class="l--xx-"></td><td class="l----x"></td></tr>
+        <tr><td class="l-x---"></td><td class="l-----"></td></tr>
       </tbody></table>
   </td>
 </tr>
