unix/index.html: created an index-in.html which will generate the
* Fiddled some in unix/:
        unix/index.html: created an index-in.html which will generate the
	    index.html using the /admin/gimp-web-url dictionary.  used the
	    new file to generate the old file.  also i changed the
	    <div="*heading" />'s to the logical <hn />.
	unix/howtos/bugzilla-in.html and bugzilla.html added bex how-to to the
	    list.  made it use the /admin/gimp-web-url dictionary for the urls.
	unix/howtos/cvs-stable.html this file has been removed, split up and
	    replaced with:
	unix/howtos/stable-cvs-get.html which is generated from:
	unix/howtos/stable-cvs-get-in.html which i also added.
	unix/howtos/stable-cvs-build.html which is generated from
	unix/howtos/stable-cvs-build-in.html which i added
	unix/howtos/template.html this file has been removed and replaced with:
	unix/howtos/howto-template.html which is generated from
	unix/howtos/howto-template-in.html which i also added.
	style/default.css hopefully was fixed to reflect the addition of the
	    <hn>'s.
	admin/gimp-web-urls is the dictionary for the attribute-rewriter
	unix/howtos/gimpenv added as promised in the build cvs gimp how to
	unix/howtos/HACKING as promised in the build tutorial

--- a/style/default.css
+++ b/style/default.css
@@ -122,6 +122,17 @@ div.heading {
   font-weight: bold;
   text-align: center;
 }
+ h1 {
+  background: #f5f5f5;
+  color: black;
+  border-style: solid; 
+  border-color: #d0d0d0;
+  border-width: 1px;
+  padding: 5px;
+  margin-bottom: 30px;
+  font-weight: bold;
+  text-align: center;
+}
 
 div.newsheading {
   background: #42638d;
@@ -155,6 +166,11 @@ td.map {
 }
 
 div.subtitle {
+  font-weight: bold;
+  clear: both;
+}
+
+ h2 {
   font-weight: bold;
   clear: both;
 }
