*** empty log message ***

--- a/includes/wgo-admin-init.xhtml
+++ b/includes/wgo-admin-init.xhtml
@@ -5,29 +5,23 @@
     <table id="layout">
       <tr>
         <td id="menu">
-          <span>www.gimp.org</span>
-          <div>
-            <a style="padding-left: 1em" href="/index.html">Home</a><br />
-          </div>
-          <span>Administration</span>
-          <div>
-            <a style="padding-left: 1em" href="/admin/index.html">Main</a><br />
-            <a style="padding-left: 1em" href="/admin/howto.html"> HOWTO</a><br />
-          </div>
-          <span>News</span>
-          <div>
-            <a style="padding-left: 1em" href="/admin/news/news-index.cgi?news-pending">Pending News</a><br />
-            <a style="padding-left: 1em" href="/admin/news/news-index.cgi?news-current">Current News</a><br />
-            <a style="padding-left: 1em" href="/admin/news/news-index.cgi?news-archive">Archived News</a><br />
-            <a style="padding-left: 1em" href="/admin/news/howto-news.html">HOWTO</a><br />
-          </div>
-          <span>Splash Contest(s)</span>
-          <div>
-            <a style="padding-left: 1em" href="/admin/contest/gallery-edit.cgi">Edit Gallery</a><br />
-          </div>
-          <span>Developer</span>
-          <div>
-            <a style="padding-left: 1em" href="/admin/develop/changelogs.cgi">ChangeLogs</a><br />
-          </div>
+          <div>www.gimp.org</div>
+            <a style="padding-left: 0.5em" href="/index.html">Home</a><br />
+
+          <div style="padding-top: 0.5em;">Administration</div>
+            <a style="padding-left: 0.5em" href="/admin/index.html">Main</a><br />
+            <a style="padding-left: 0.5em" href="/admin/howto.html"> HOWTO</a><br />
+
+          <div style="padding-top: 0.5em;">News</div>
+            <a style="padding-left: 0.5em" href="/admin/news/news-index.cgi?news-pending">Pending News</a><br />
+            <a style="padding-left: 0.5em" href="/admin/news/news-index.cgi?news-current">Current News</a><br />
+            <a style="padding-left: 0.5em" href="/admin/news/news-index.cgi?news-archive">Archived News</a><br />
+            <a style="padding-left: 0.5em" href="/admin/news/howto-news.html">HOWTO</a><br />
+
+          <div style="padding-top: 0.5em;">Splash Contest</div>
+            <a style="padding-left: 0.5em" href="/admin/contest/gallery-edit.cgi">Edit Gallery</a><br />
+
+          <div style="padding-top: 0.5em;">Developer</div>
+            <a style="padding-left: 0.5em" href="/admin/develop/changelogs.cgi">ChangeLogs</a><br />
         </td>
      <td id="main">
