Tutorials now uses <hx> tags instead of <div class="">.

--- a/tutorials/template/index.html
+++ b/tutorials/template/index.html
@@ -2,9 +2,9 @@
 <title>GIMP - Title goes here</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Title goes here</div>
+<h1>Title goes here</h1>
 
-<div class="subtitle">Subtitle goes here</div>
+<h2>Subtitle goes here</h2>
 <p class="images">
   <img src="someimage.jpg" alt=""/>
   <img src="someotherimage.jpg" alt=""/>
