--- a/style/default.css
+++ b/style/default.css
@@ -1,3 +1,7 @@
+/* Here is the elements used for the different parts example: #menu and so on.
+ * If you need more options to be added here you need to talk with scizzo,carol,brix or
+ * Helvetix about it before we make any changes here. */
+
 body {
   background: white;
   color: black;
@@ -13,7 +17,7 @@ a {
   font-weight: bold;
 }
 
-a:hover	{
+a:hover {
   background: transparent;
   color: #991e1e;
   text-decoration: underline;
@@ -24,12 +28,91 @@ img {
   border: none;
 }
 
-kbd {
-  font-weight: bold;
+img.icon {
+  float: left;
+  margin: 5px;
 }
 
-p.images img {
-  border: solid black 2px;
+img.map {
+  margin: 0px;
+  padding: 0px;
+}
+
+/* Main header. */
+h1 {
+  background: #f5f5f5;
+  color: black;
+  border-style: solid;
+  border-color: #d0d0d0;
+  border-width: 1px;
+  padding: 5px;
+  margin-bottom: 30px;
+  font-weight: bold;
+  font-size: 110%;
+  text-align: center;
+}
+
+/* Subtitle header. */
+h2 {
+  font-weight: bold;
+  clear: both;
+  font-size: 110%;
+}
+
+/* Another subtitle using another font-size then the subtitle. */
+h3 {
+  font-weight: bold;
+  clear: both;
+  font-size: 105%;
+}
+
+div#main {
+  padding: 10px;
+  vertical-align: top;
+}
+
+/* This heading is going to be removed as soon as the whole site uses
+ * the <h1> instead of this class file.*/
+div.heading {
+  background: #f5f5f5;
+  color: black;
+  border-style: solid;
+  border-color: #d0d0d0;
+  border-width: 1px;
+  padding: 5px;
+  margin-bottom: 30px;
+  font-weight: bold;
+  text-align: center;
+}
+
+div.newsheading {
+  background: #42638d;
+  color: #eeeeee;
+  padding: 5px;
+  font-weight: bold;
+  clear: left;
+}
+
+/* This header is going to be removed as soon as the whole site uses
+ * the <h2> instead of this class file.*/
+div.subtitle {
+  font-weight: bold;
+  clear: both;
+}
+
+div.book-of-wilber { 
+  font-size: large;
+  background: #CC9966 url(../images/wilberbook.jpg);
+  font-family:  postantiqua, "zapf chancery", "urw chancery l", fantasy;
+  border: medium groove;
+  padding: 1em;
+}
+
+p {
+  margin: 1.33em 0px;
+  margin-left: 40px;
+  margin-right: 40px;
+  text-align: justify;
 }
 
 p.news {
@@ -37,19 +120,24 @@ p.news {
   text-align: justify;
 }
 
-p.images {
-  text-align: center;
+p.images img {
+  border: solid black 2px;
 }
 
-p {
-  margin: 1.33em 0px;
-  margin-left: 40px; 
-  margin-right: 40px;
-  text-align: justify;
+span.newstitle {
+  float: left;
+}
+
+span.newsdate {
+  float: right;
+}
+
+span.filter {
+  font-weight: bold;
 }
 
 li {
-  margin-left: 40px; 
+  margin-left: 40px;
   margin-right: 40px;
   text-align: justify;
 }
@@ -60,6 +148,74 @@ li {
 
 .list p {
   margin: 0 0 0 0;
+}
+
+pre.code {
+  color: black;
+  background: #f5f5f5;
+  border: solid 2px black;
+  font-family: monospace;
+  white-space: pre;
+  margin: 1.33em 0px;
+  margin-left: 40px;
+  margin-right: 40px;
+  padding: 1.33em;
+}
+
+pre.debug {
+  color: black;
+  background: #ddddff;
+  border: solid 2px black;
+  font-family: monospace;
+  white-space: pre;
+  margin: 1.33em 0px;
+  margin-left: 40px;
+  margin-right: 40px;
+  padding: 1.33em;
+}
+
+kbd {
+  font-weight: bold;
+}
+
+td#main {
+  padding: 10px;
+  vertical-align: top;
+  width: 100%;
+}
+
+td.map {
+  margin: 0px;
+  padding: 0px;
+}
+
+/* Changes here should only be done if you know exactly what you are doing.
+ * Changes done here will change the appearence of the whole site and should
+ * be left up to the designer of the site to change. Contact the designer for
+ * more information about the values below. */
+
+#menu {
+  background: #f5f5f5;
+  color: black;
+  border-style: solid;
+  border-color: #d0d0d0;
+  border-top-width: 0px;
+  border-bottom-width: 0px;
+  border-left-width: 0px;
+  border-right-width: 1px;
+  padding: 10px;
+  font-weight: bold;
+  vertical-align: top;
+  white-space: nowrap;
+}
+
+#layout {
+  clear: both;
+  margin: 0px;
+  border: none;
+  padding: 0px;
+  border-collapse: collapse;
+  width: 100%;
 }
 
 #titlebar {
@@ -75,148 +231,6 @@ li {
 #titlebarright {
   float: right;
 }
-
-#layout {
-  clear: both;
-  margin: 0px;
-  border: none;
-  padding: 0px;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-#menu {
-  background: #f5f5f5;
-  color: black;
-  border-style: solid; 
-  border-color: #d0d0d0;
-  border-top-width: 0px; 
-  border-bottom-width: 0px; 
-  border-left-width: 0px; 
-  border-right-width: 1px;
-  padding: 10px;
-  font-weight: bold;
-  vertical-align: top;
-  white-space: nowrap;
-}
-
-td#main {
-  padding: 10px;
-  vertical-align: top;
-  width: 100%;
-}
-
-div#main {
-  padding: 10px;
-  vertical-align: top;
-}
-
-div.heading {
-  background: #f5f5f5;
-  color: black;
-  border-style: solid; 
-  border-color: #d0d0d0;
-  border-width: 1px;
-  padding: 5px;
-  margin-bottom: 30px;
-  font-weight: bold;
-  text-align: center;
-}
- h1 {
-  background: #f5f5f5;
-  color: black;
-  border-style: solid; 
-  border-color: #d0d0d0;
-  border-width: 1px;
-  padding: 5px;
-  margin-bottom: 30px;
-  font-weight: bold;
-  font-size: 110%;
-  text-align: center;
-}
-
-div.newsheading {
-  background: #42638d;
-  color: #eeeeee;
-  padding: 5px;
-  font-weight: bold;
-  clear: left;
-}
-
-span.newstitle {
-  float: left;
-}
-
-span.newsdate {
-  float: right;
-}
-
-img.icon {
-  float: left;
-  margin: 5px;
-}
-
-img.map {
-  margin: 0px;
-  padding: 0px;
-}
-
-td.map {
-  margin: 0px;
-  padding: 0px;
-}
-
-div.subtitle {
-  font-weight: bold;
-  clear: both;
-}
-
- h2 {
-  font-weight: bold;
-  clear: both;
-  font-size: 110%;
-}
-
- h3 {
-  font-weight: bold;
-  clear: both;
-  font-size: 105%;
-}
-
-span.filter {
-  font-weight: bold;
-}
-
-pre.code {
-  color: black;
-  background: #f5f5f5;
-  border: solid 2px black;
-  font-family: monospace;
-  white-space: pre;
-  margin: 1.33em 0px;
-  margin-left: 40px; 
-  margin-right: 40px;
-  padding: 1.33em;
-}
-
-pre.debug {
-  color: black;
-  background: #ddddff;
-  border: solid 2px black;
-  font-family: monospace;
-  white-space: pre;
-  margin: 1.33em 0px;
-  margin-left: 40px; 
-  margin-right: 40px;
-  padding: 1.33em;
-}
-
-div.book-of-wilber { font-size: large; 
-	background: #CC9966 url(../images/wilberbook.jpg);
-	font-family:  postantiqua, "zapf chancery", "urw chancery l", fantasy;
-	border: medium groove; 
-	padding: 1em;
- }
 
 #linkbar, #navbar {
   clear: both;
@@ -240,7 +254,6 @@ div.book-of-wilber { font-size: large;
 }
 
 @media print {
-
 #navbar, #linkbar, #menu {
   display: none
 }
