Little css tweaks on the news administration pages. Reversed the order in which the news blotter was displayed.  New news is at the top.

--- a/programmatic/admin/news/include/news-archive_footer.html
+++ b/programmatic/admin/news/include/news-archive_footer.html
@@ -3,12 +3,7 @@
   <td></td>
   <td></td>
   <td></td>
-  <td style="text-align: right;">
-    <table class="ld" cellpadding="0" cellspacing="0" width="100%"><tbody>
-        <tr><td class="l--x--"></td><td class="l----x"></td></tr>
-        <tr><td class="l--x--"></td><td class="l----x"></td></tr>
-      </tbody></table>
-  </td>
+  <td></td>
 </tr>
 <tr>
   <td></td>
@@ -20,9 +15,9 @@
     <input type="hidden" name="queue" value="archive" />
   </td>
   <td>
-    <table class="ld" cellpadding="0" cellspacing="0" width="100%"><tbody>
-        <tr><td class="l--xx-"></td><td class="l----x"></td></tr>
-        <tr><td class="l-x---"></td><td class="l-----"></td></tr>
+    <table class="ld"><tbody>
+        <tr><td class="l--xx-">&nbsp;</td><td class="l----x"></td></tr>
+        <tr><td class="l-x---">&nbsp;</td><td class="l-----"></td></tr>
       </tbody></table>
   </td>
 </tr>
