--- a/programmatic/admin/news/include/news-current_footer.html
+++ b/programmatic/admin/news/include/news-current_footer.html
@@ -1,28 +1,23 @@
 <!-- -*- xml -*- -->
-<tr style="background: white none;">
+<tr>
   <td></td>
   <td></td>
   <td></td>
-  <td style="text-align: right;">
-    <table class="ld" cellpadding="0" cellspacing="0" width="100%"><tbody>
-        <tr><td class="l--x--"></td><td class="l----x"></td></tr>
-        <tr><td class="l--x--"></td><td class="l----x"></td></tr>
-      </tbody></table>
-  </td>
+  <td></td>
 </tr>
 <tr>
   <td></td>
   <td></td>
-  <td style="text-align: right; padding-right: 2px;">
+  <td style="text-align: right; padding-right: .125em;">
     <input type="submit" name="action" value="delete" />
     <input type="submit" name="action" value="pending" />
     <input type="submit" name="action" value="archive" />
     <input type="hidden" name="queue" value="current" />
   </td>
   <td style="margin: 0; padding: 0;">
-    <table class="ld" cellpadding="0" cellspacing="0" width="100%"><tbody>
-        <tr><td class="l--xx-"></td><td class="l----x"></td></tr>
-        <tr><td class="l-x---"></td><td class="l-----"></td></tr>
+    <table class="ld"><tbody>
+        <tr><td class="l--xx-">&nbsp;</td><td class="l----x"></td></tr>
+        <tr><td class="l-x---">&nbsp;</td><td class="l-----"></td></tr>
       </tbody></table>
   </td>
 </tr>
