Modified ChangeLog. Fixed a problem with the validation link not falling
Modified ChangeLog.
Fixed a problem with the validation link not falling to the bottom of the site.

--- a/includes/wgo-xhtml-fini.xhtml
+++ b/includes/wgo-xhtml-fini.xhtml
@@ -1,6 +1,6 @@
 <!-- $Id$ -->
 <div>
-<span style="position: absolute; left: 0; font-size: xx-small;"><a href="http://validator.w3.org/check/referer">Validate XHTML</a></span>
+<a style="position:absolute; left: 0; font-size: xx-small;" href="http://validator.w3.org/check/referer">Validate XHTML</a>
 </div>
   </body>
 </html>
