--- a/programmatic/admin/news/include/news-pending_footer.html
+++ b/programmatic/admin/news/include/news-pending_footer.html
@@ -1,22 +1,17 @@
 <!-- -*- xml -*- -->
 <tr>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-</tr>
-<tr>
-  <td></td>
-  <td></td>
-  <td style=" text-align: right; padding-right: 2px;">
-    <input type="submit" name="action" value="delete" />
-    <input type="submit" name="action" value="approve" />
+  <td class="control">
+    <a class="faux-button" style="background: #ff8000 none; color: white; font-weight: bold;" href="/var/spool/news-pending/news.rdf">XML</a></td>
+  <td class="control"></td>
+  <td class="control" style="text-align: right; padding-right: 2px;">
+    <input type="submit" name="action" value="delete" title="Click to delete all selected messages" />
+    <input type="submit" name="action" value="approve" title="Click to approve all selected messages" />
     <input type="hidden" name="queue" value="pending" />
   </td>
-  <td>
+  <td class="control">
     <table class="ld"><tbody>
-        <tr><td class="l--xx-">&nbsp;</td><td class="l----x"></td></tr>
-        <tr><td class="l-x---">&nbsp;</td><td class="l-----"></td></tr>
+        <tr><td class="l--xx-">&nbsp;</td><td class="l----x">&nbsp;</td></tr>
+        <tr><td class="l-x---">&nbsp;</td><td class="l-----">&nbsp;</td></tr>
       </tbody></table>
   </td>
 </tr>
