--- a/programmatic/admin/news/include/news-archive_footer.html
+++ b/programmatic/admin/news/include/news-archive_footer.html
@@ -1,23 +1,18 @@
 <!-- -*- xml -*- -->
 <tr>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-</tr>
-<tr>
-  <td></td>
-  <td></td>
-  <td style="text-align: right;">
-    <input type="submit" name="action" value="delete" />
-    <input type="submit" name="action" value="current" />
-    <input type="submit" name="action" value="pending" />
-    <input type="hidden" name="queue" value="archive" />
+  <td class="control">
+    <a class="faux-button" style="background: #ff8000 none; color: white; font-weight: bold;" href="/var/spool/news-archive/news.rdf">XML</a></td>
+  <td class="control"></td>
+  <td class="control" style="text-align: right;">
+    <input type="submit" name="action" value="delete"  title="Click to delete all selected messages" />
+    <input type="submit" name="action" value="current" title="Click to move all selected messages to the current queue" />
+    <input type="submit" name="action" value="pending" title="Click to delete all selected messages to the pending queue" />
+    <input type="hidden" name="queue"  value="archive" />
   </td>
-  <td>
+  <td class="control">
     <table class="ld"><tbody>
-        <tr><td class="l--xx-">&nbsp;</td><td class="l----x"></td></tr>
-        <tr><td class="l-x---">&nbsp;</td><td class="l-----"></td></tr>
+        <tr><td class="l--xx-">&nbsp;</td><td class="l----x">&nbsp;</td></tr>
+        <tr><td class="l-x---">&nbsp;</td><td class="l-----">&nbsp;</td></tr>
       </tbody></table>
   </td>
 </tr>
