changed to reflect new options to ChangeLog.py font-size: medium instead
* programmatic/admin/develop/gimp-unstable.sh:
* programmatic/admin/develop/gegl-unstable.sh:
* programmatic/admin/develop/gimp-help.sh:
* programmatic/admin/develop/gimp-print.sh:
* programmatic/admin/develop/film-gimp.sh: changed to reflect new options to ChangeLog.py
* programmatic/admin/wgo-admin.cpp: font-size: medium instead of small
* programmatic/admin/news/news-edit.py (html_news_edit): use <h1> instead of old <div>
  visual cleanup, position tweaking, and "tooltips"
* programmatic/contest/contest.py (submit): use <h2> instead of old <div>
* programmatic/wgo.py (error): use <h2> instead of old <div>
* programmatic/contest/wgo-contest.cpp: passes validation

--- a/programmatic/admin/news/include/news-archive_header.html
+++ b/programmatic/admin/news/include/news-archive_header.html
@@ -1,5 +1,5 @@
 <!-- -*- xml -*- -->
-<div class="heading">Archived News Blotter</div>
+<h1 class="heading">Archived News Blotter</h1>
   <form action="news-batch.cgi">
   <table class="news-index" width="100%" cellspacing="0" cellpadding="0" summary="archive news queue">
     <tbody>
