--- a/programmatic/admin/news/include/news-pending_header.html
+++ b/programmatic/admin/news/include/news-pending_header.html
@@ -1,5 +1,5 @@
 <!-- -*- xml -*- -->
-<div class="heading">Pending News Blotter</div>
+<h1 class="heading">Pending News Blotter</h1>
   <form action="news-batch.cgi">
   <table class="news-index" width="100%" cellspacing="0" cellpadding="0" summary="news-approval queue">
     <tbody>
