--- a/programmatic/admin/news/include/news-current_header.html
+++ b/programmatic/admin/news/include/news-current_header.html
@@ -1,5 +1,5 @@
 <!-- -*- xml -*- -->
-<div class="heading">Current News Blotter</div>
+<h1 class="heading">Current News Blotter</h1>
 <form action="news-batch.cgi">
   <table class="news-index" width="100%" cellspacing="0" cellpadding="0" summary="news-approval queue">
     <tbody>
