Modified Changelog. Add "done" to the todo list for the Windows stuff.
Modified Changelog.
Add "done" to the todo list for the Windows stuff.
Fixed the files that needs downloads in the menu.
Add this section for the downloads of GIMP.
Add this file that finishes the windows section.
Removed these files.

--- a/includes/wgo-menu.xhtml
+++ b/includes/wgo-menu.xhtml
@@ -1,6 +1,7 @@
       <a href="/index.html">News</a>
       <a href="/about/">About GIMP</a>
       <a href="/resources/">Resources</a>
+      <a href="/downloads/">Downloads</a>
       <a href="/registry.html">Plug-In Registry</a>
       <a href="/docs/">Documentation</a>
       <a href="/tutorials/">Tutorials</a>
