--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -8,6 +8,7 @@
           <a href="/index.html">News</a><br/>
           <a href="/about/">About GIMP</a><br/>
           <a href="/resources/">Resources</a><br/>
+	  <a href="/downloads/">Downloads</a><br/>
           <a href="http://registry.gimp.org">Plug-In Registry</a><br/>
           <a href="/docs/">Documentation</a><br/>
           <a href="/tutorials/">Tutorials</a><br/>
