--- a/includes/wgo-styles.xhtml
+++ b/includes/wgo-styles.xhtml
@@ -1,3 +1,4 @@
 <!-- $Id$ -->
 <!-- element style information -->
 <link rel="stylesheet" type="text/css" href="/style/default.css" />
+<link rel="stylesheet" type="text/css" href="/style/extended.css" />
