--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -12,7 +12,7 @@
           <a href="http://registry.gimp.org">Plug-In Registry</a><br/>
           <a href="/docs/">Documentation</a><br/>
           <a href="/tutorials/">Tutorials</a><br/>
-          <a href="/bugszilla.html">Bugs</a><br/>
+          <a href="/bugzilla.html">Bugs</a><br/>
           <a href="/develop/">Development</a><br/>
           <br/>
           <a href="/unix/">GIMP for Unix</a><br/>
