--- a/includes/wgo-styles.xhtml
+++ b/includes/wgo-styles.xhtml
@@ -2,3 +2,4 @@
 <!-- element style information -->
 <link rel="stylesheet" type="text/css" href="/style/default.css" />
 <link rel="stylesheet" type="text/css" href="/style/extended.css" />
+<link rel="icon" href="/images/wilber16.png" type="image/png"/>
